# wgpu-learn

./: .gitignore  Cargo.toml  README.md
.codex/: config.toml
basic-window/: Cargo.toml
boids/: Cargo.toml  README.md
compute/: Cargo.toml  memo.md
compute/src/: main.rs
examples/: nn_raytrace_preview.rs
examples/NN_and_raytracing/: README.md  generate_image.wgsl  main.rs
examples/boids/: README.md  main.rs  shader.wgsl
examples/compute/: main.rs  shader.wgsl
examples/measure_fps/: wgpu_fifo.rs  wgpu_no_vsync.rs
measure-fps/: Cargo.toml  memo.md
nn-and-raytracing/: Cargo.toml  README.md
nn-and-raytracing/src/: back.wgsl  forward.wgsl  main.rs
src/: main.rs  memo.md
